<resources>
    <string name="app_name">proyectoUAO</string>
    <string name="log_in">Log in </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!--genericos-->
    <string name="btn_ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="titleMap">To start</string>
    <string name="msg_starting">to enter a new restaurant you must first select the location, then enter a name and description to save it.</string>
    <!--Login-->
    <string name="msg_email">Please enter a email</string>
    <string name="msg_password">Please enter a password</string>
    <string name="msg_password2">The password must be at least 6 characters long</string>
    <string name="sure">Are you sure you want to leave</string>
    <string name="msg_exist">This user is already registered</string>
    <string name="msg_error">This user could not be registered</string>
    <!--Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_user">Users</string>
    <string name="menu_side">Sides</string>
    <string name="menu_offer">Offers</string>
    <string name="hello">Hello</string>
    <string name="logOut">Log Out</string>
    <string name="name">Name</string>
    <string name="nameSide">Name of side</string>
    <string name="description">Description</string>
    <string name="nameRestaurant">Name of place</string>
    <string name="comboTitle">Combo name</string>
    <string name="comboDescription">Combo description</string>
    <string name="btnImageProduct">Upload</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="startDate">Start date</string>
    <string name="startTime">Start time</string>
    <string name="endDate">End date</string>
    <string name="endTime">End time</string>
    <!--add user-->
    <string name="lastName">Last name</string>
    <string name="faculty">Faculty</string>
    <string name="site">Site</string>
    <string name="program">Program</string>
    <string name="role">Role</string>
    <string name="btn_add">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <!--message-->
    <string name="msg_nameUser">Please enter a name</string>
    <string name="msg_lastNameUser">Please enter a last name</string>
    <string name="msg_comboName">Please enter a combo name</string>
    <string name="msg_comboDesc">Please enter a combo description</string>
    <string name="msg_amount">Please enter a amount of product</string>
    <string name="msg_amount2">The amount cannot be less than 0</string>
    <string name="msg_namePlace">Please select a place</string>
    <string name="msg_facultyUser">Please enter a faculty</string>
    <string name="msg_programUser">Please enter a program</string>
    <string name="msg_emailUser">Please enter a email</string>
    <string name="msg_passwordUser">Please enter a password</string>
    <string name="msg_selectRole">Please select a role</string>
    <string name="msg_selectSite">Please select a site</string>
    <string name="msg_selectStatus">Please select a status</string>
    <string name="msg_successUser">The user was created</string>
    <string name="msg_successUser2">The user was edited</string>
    <string name="msg_successSide">The side was created</string>
    <string name="msg_successSide2">The side was edited</string>
    <string name="msg_successOffer">The offer was created</string>
    <string name="msg_successOffer2">The offer was edited</string>
    <string name="msg_disabled">The user account has been disabled by an administrator</string>
    <string name="msg_info">Success</string>
    <string name="msg_startDate">Please enter a start date</string>
    <string name="msg_endDate">Please enter a end date</string>
    <string name="msg_startTime">Please enter a start time</string>
    <string name="msg_endTime">Please enter a end time</string>
    <string name="seller"><u>See seller\'s location</u></string>
    <string name="msg_imageProduct">Please enter a image</string>
    <string name="msg_diffDate">The end date must be greater than the start date</string>
    <string name="txt_unites">units</string>
    <string name="msg_emptyOffer">No offers for now</string>
    <string name="msg_emptySide">No offers for now</string>
    <string name="msg_addProduct">The product was added to cart</string>
    <string name="product_empty">You don\'t have any added products yet</string>
    <string name="btn_buy">Buy</string>
    <string name="msg_shopping">Thanks for your purchase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="status">Status</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoiam9zaGVhbnQiLCJhIjoiY2t2NDhnNzd3MHkxYjJvbDB0dmlvdmsxbyJ9.iJzPyuT3GYUg5cdORlczJA</string>
</resources>