<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            android:checked="true" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_side"
            android:icon="@drawable/location"
            android:title="@string/menu_side" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/offer"
            android:title="@string/menu_offer" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping"
            android:title="Shopping cart" />
        <item
            android:id="@+id/nav_shoppingList"
            android:icon="@drawable/ticket"
            android:title="Shopping list" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>
</menu>