<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/txt_title"
            android:layout_marginTop="@dimen/txt_margin2"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/txt_margin">
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginHorizontal="@dimen/img_margin2">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/txt_margin2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/email"
            android:id="@+id/eTemail">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/eTpassword"
            android:layout_marginBottom="@dimen/btn_margin_button">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/btn_margin"
            android:text="@string/log_in"
            android:layout_marginBottom="@dimen/btn_margin_button"
            android:textSize="@dimen/txt_btn"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:id="@+id/btnLogin">
        </Button>

    </LinearLayout>

</LinearLayout>