<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOffer"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New offer"
            android:layout_marginHorizontal="@dimen/txt_margin2"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/camera"
                        android:padding="20dp"
                        android:id="@+id/imageProduct">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/btn_margin"
                        android:text="@string/btnImageProduct"
                        android:textSize="@dimen/txt_btn"
                        android:backgroundTint="@color/blue"
                        android:textColor="@color/white"
                        android:id="@+id/btn_upLoad">
                    </Button>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/txt_margin2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nameRestaurant">
                    </TextView>
                    <Spinner
                        android:id="@+id/spinnerNameRestaurant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comboTitle">
                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_comboName">
                    </EditText>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comboDescription">
                    </TextView>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_comboDesc">
                    </EditText>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount">
                    </TextView>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_amount"
                        android:inputType="number">
                    </EditText>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price">
                    </TextView>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_price"
                        android:inputType="number">
                    </EditText>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="2dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/startDate">
                            </TextView>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_startDate"
                                android:onClick="showStartDatePicker"
                                android:editable="false"
                                tools:ignore="Deprecated">
                            </EditText>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="2dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/startTime">
                            </TextView>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_startTime"
                                android:onClick="showStartTimePicker"
                                android:editable="false"
                                tools:ignore="Deprecated">
                            </EditText>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="2dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/endDate">
                            </TextView>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_endDate"
                                android:onClick="showEndDatePicker"
                                android:editable="false"
                                tools:ignore="Deprecated">
                            </EditText>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="2dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/endTime">
                            </TextView>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_endTime"
                                android:onClick="showEndTimePicker"
                                android:editable="false"
                                tools:ignore="Deprecated">
                            </EditText>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="@dimen/txt_margin2">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/btn_cancel"
                        android:backgroundTint="@color/red"
                        android:id="@+id/btn_cancel">
                    </Button>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/btn_add"
                        android:backgroundTint="@color/green"
                        android:id="@+id/btn_save">
                    </Button>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>